--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ header{
 
 main{
 	text-align: center;
-	background-image: url(/css/kepek/muszaki.jpg);
+	background-image: url(http://designtheworld.hu/images/fooldal-cikk-kezdokep2.jpg);
 }
 
 
