--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ body{
 }
 
 header{
-	background-image: url(css/kepek/szovet.jpg);
+	background-image: url(https://raw.githubusercontent.com/thetothdaniel/toth_daniel_csaba_portfolio/main/css/kepek/szovet.jpg);
 	padding: 0.5rem;
 }
 
