--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ header{
 
 main{
 	text-align: center;
-	background-image: url(http://designtheworld.hu/images/fooldal-cikk-kezdokep2.jpg);
+	background-image: url(https://raw.githubusercontent.com/thetothdaniel/toth_daniel_csaba_portfolio/main/css/kepek/muszaki.jpg);
 }
 
 
